--- a/lab4.html
+++ b/lab4.html
@@ -13,4 +13,7 @@
     <p class="Para1">Para 1</p>
     <footer class="footer">footer</footer>
 </body>
+    <div class="container">
+        <p class="Para2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
 </html>
