--- a/lab4.html
+++ b/lab4.html
@@ -24,4 +24,6 @@
     <div class="main-content">DIV1</div>
     <div class="main-content">DIV2</div>
     <div class="main-content">DIV3</div>
+
+    <p id="Pcenter">Paragraph</p>
 </html>
