--- a/lab4.html
+++ b/lab4.html
@@ -26,4 +26,9 @@
     <div class="main-content">DIV3</div>
 
     <p id="Pcenter">Paragraph</p>
+
+    <a href="https://www.wikipedia.org/" class="anchor">Wikipedia1</a>
+    <a href="https://www.wikipedia.org/" class="anchor">Wikipedia2</a>
+    <a href="https://www.wikipedia.org/" class="anchor">Wikipedia3</a>
+    
 </html>
