--- a/lab4.html
+++ b/lab4.html
@@ -30,5 +30,12 @@
     <a href="https://www.wikipedia.org/" class="anchor">Wikipedia1</a>
     <a href="https://www.wikipedia.org/" class="anchor">Wikipedia2</a>
     <a href="https://www.wikipedia.org/" class="anchor">Wikipedia3</a>
+
+    <h1 class="Headings">Heading1</h1>
+    <h2 class="Headings">Heading2</h2>
+    <h3 class="Headings">Heading3</h3>
+    <h4 class="Headings">Heading4</h4>
+    <h5 class="Headings">Heading5</h5>
+    <h6 class="Headings">heading6</h6>
     
 </html>
