--- a/lab4.html
+++ b/lab4.html
@@ -37,5 +37,7 @@
     <h4 class="Headings">Heading4</h4>
     <h5 class="Headings">Heading5</h5>
     <h6 class="Headings">heading6</h6>
+
+    <p class="bold-text">BOLD</p>
     
 </html>
