--- a/lab4.html
+++ b/lab4.html
@@ -41,5 +41,9 @@
     <p class="bold-text">BOLD</p>
 
     <p id="intro">Introduction</p>
+
+    <p class="custom-font">Paragraph1</p>
+    <p class="custom-font">Paragraph2</p>
+
     
 </html>
