--- a/lab4.html
+++ b/lab4.html
@@ -45,5 +45,6 @@
     <p class="custom-font">Paragraph1</p>
     <p class="custom-font">Paragraph2</p>
 
+    <h1 id="h1">Heading1</h1>
     
 </html>
