--- a/lab4.html
+++ b/lab4.html
@@ -46,5 +46,7 @@
     <p class="custom-font">Paragraph2</p>
 
     <h1 id="h1">Heading1</h1>
+
+    <p class="capitalize-text">my dog's name is luna</p>
     
 </html>
